solve rectangle photo did not appear

--- a/inedx.html
+++ b/inedx.html
@@ -90,7 +90,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="/images/Rectangle 30.png" alt="" srcset="" />
+          <img src="/images/Rectangle.png" alt="" />
           <span class="imageDesc">
             <i class="fa-solid fa-solar-panel"></i>
             <p>The Piece That Sold Me On This Polarizing Trend</p>
